@@ -6,12 +6,11 @@ New in 0.92:
   the notation of data transfers. And, that is displayed only in debug
   mode, that is to say, nothing is displayed by default. Remember that
   you can turn on debug mode via the command "debug".
-* The command "help" doesn't show all the available commands any longer,
+* The command "help" doesn't show all the available commands by default,
   when no argument is specified. Rarely used commands (such as
   "testload") and useless commands in interactive use (such as
   "savedefault") are hidden. If you want to see help messages for those
-  commands, you will have to specify the names to "help" explicitly.
-  (Also, note that <TAB> still shows all the commands.)
+  commands, specify the new option "--all".
 * A built-in, `more'-like pager is added. When a command prints too many
   lines to fit the screen, GRUB waits until you hit return key. This
   feature can be turned off by the new command "pager".
